fixed alignment issue and made save button disabled if variable and constant are not present

--- a/src/app/components/core/control-dispatcher/api-flow/add-edit-api-flow/add-edit-api-flow.component.css
+++ b/src/app/components/core/control-dispatcher/api-flow/add-edit-api-flow/add-edit-api-flow.component.css
@@ -74,3 +74,7 @@ span.is-small {
 #confirmation-execute-dialog .modal-card-body {
     min-height: 22vh;
 }
+
+[hidden] {
+    display: none !important;
+}
